Add Modal infra layer, dashboard, and pilot sweep config
- ModalProvider: deploy/health-check/teardown via subprocess + urllib
- modal_vllm.py: ASGI app on H200, thinking disabled at proxy, 300s timeout
- CLI: --infra modal, --skip-deploy, --prebuild-only, --provider flags
- Sweep: parallel ProcessPoolExecutor with shared Modal endpoint
- instance_ids list support for explicit instance selection
- Dashboard generator: per-suite HTML tracking pages (strategy × instance matrix)
- Pilot config: 10 strategies × 6 instances (pilot-6x10.json)
- Layout wiring: stack_heap strategy now receives layout from config
- 197 tests passing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,13 @@ dev = [
 ]
 scoring = ["numpy>=1.24", "matplotlib>=3.7"]
 swebench = ["swebench>=2.0", "docker>=6.0"]
+modal = ["modal>=0.73"]
 datagen = ["pyyaml>=6.0"]
 adapters = [
     "mem0ai",
     "letta-client",
 ]
-all = ["synix-bench[dev,scoring,swebench,datagen,adapters]"]
+all = ["synix-bench[dev,scoring,swebench,datagen,adapters,modal]"]
 
 [project.scripts]
 synix-bench = "synix.cli.main:cli"
